src/test/deca/context/invalid/obtained_res/declClassextendsClassNoneDefinedcont.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:40) - verify program: start
DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:43) - verify listClass: start
./src/test/deca/context/invalid/created/testPass1/declClassextendsClassNoneDefined.deca:8:8: UnknownTypeException: The type does not exist in Deca. 
